--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
                                  src="Images/nyc_spatio_temporal_trends.png"
                                  alt="Project Image" class="project-image">
                             <div class="project-category">Machine Learning</div>
-                            <h2 class="project-title">Zip Codes Business Patterns: economic trends across
-                                geographies</h2>
+                            <h2 class="project-title">Spatio-Temporal trends Analysis in NYC</h2>
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analyzing%20Spatio_temporal_trends_in_the_number_of_businesses_per_zip_code_in_NYC/Rakesh_Emuru_Spatio_temporal_trends_in_the_number_of_businesses_per_zip_code_in_NYC_.ipynb"
