--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             <h2 class="project-title">Predicting Diabetes Risk in Homogeneous Populations</h2>
                         </div>
                         <div class="back">
-                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
+                            <a href=https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Diabities%20in%20Pima%20Population/Rakesh_Emuru_Predict_diabetes_in_the_Pima_population_in_AZ_using_Logistic_Regression.ipynb"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This project leverages Logistic Regression to predict the likelihood of diabetes
