--- a/index.html
+++ b/index.html
@@ -54,24 +54,19 @@
 
         </div>
 
-        <div class="value-proposition">
-            <h2 style="font-weight: 700;"><i class="fa fa-user" aria-hidden="true"></i> Why I'm the Right Fit! </h2>
-            <ol>
-                <li><span>•</span> Expertise in distilling complex datasets into strategic insights for informed
-                    decision-making.
-                </li>
-                <li><span>•</span> Proficient in ML, computer vision, and NLP for tackling real-world problems.</li>
-                <li><span>•</span> Full-stack development acumen, crafting user-focused apps with seamless deployment.
-                </li>
-                <li><span>•</span> Full SDLC proficiency, delivering s with dedication to professional
-                    excellence.
-                </li>
-                <li><span>•</span> Proven track record of meticulous project execution, ensuring successful outcomes.
-                </li>
-                <li><span>•</span>Fast learner of new technologies, as demonstrated by my quick grasp of current ones.</li>
-            </ol>
-        </div>
-
+<title>Why I'm the Right Fit!</title>
+</head>
+    <div class="value-proposition">
+        <h2><i class="fa fa-user" aria-hidden="true"></i> Why I'm the Right Fit!</h2>
+        <ol>
+            <li>Expertise in distilling complex datasets into strategic insights for informed decision-making.</li>
+            <li>Proficient in ML, computer vision, and NLP for tackling real-world problems.</li>
+            <li>Full-stack development acumen, crafting user-focused apps with seamless deployment.</li>
+            <li>Full SDLC proficiency, delivering solutions with dedication to professional excellence.</li>
+            <li>Proven track record of meticulous project execution, ensuring successful outcomes.</li>
+            <li>Fast learner of new technologies, as demonstrated by my quick grasp of current ones.</li>
+        </ol>
+    </div>
     </header>
 
 <!--  Rakesh Emuru Introduction -->
