--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <h2 class="project-title">Educational Project Approval Prediction for DonorsChoose.org</h2>
                         </div>
                         <div class="back">
-                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
+                            <a href="https://colab.research.google.com/drive/1BGNa7VFpwtXW8YcT1L3CMlLRN0C2-J-d?usp=sharing"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     Developed a machine learning model to predict DonorsChoose.org proposal
@@ -215,7 +215,7 @@
                             <h2 class="project-title">Signature Authentication with Siamese Networks</h2>
                         </div>
                         <div class="back">
-                            <a href="https://colab.research.google.com/drive/1h4L9xNV-tlFna9Iu6_SPihdif3nr_yHV#scrollTo=DM39r5vqK5yg"
+                            <a href="https://colab.research.google.com/drive/1_c-jqHX6ot-ehOa0Fmuy9TvQllA0yYxJ?usp=sharing"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     Utilized a Siamese convolutional neural network approach to authenticate
